versioned_docs/version-1.46/release-notes.mdx
---
title: Release notes
description: Latest features, bug fixes, breaking changes, and improvements in each Okteto release, with Kubernetes compatibility details.
sidebar_label: Release notes
id: release-notes
---

import Image from '@theme/Image';

## 1.46.0

3 July 2026

This version is compatible with Kubernetes versions 1.33 to 1.35 \
Okteto Chart release 1.46 is designed to work with [Okteto CLI 3.21.x](https://github.com/okteto/okteto/releases/tag/3.21.0)

### New Features {#new-features-1.46}

- **Workload identity for Docker Compose services**: Docker Compose services now support a per-service [`x-okteto-identity-token`](reference/docker-compose.mdx#x-okteto-identity-token-object-optional) directive. Okteto projects an audience-scoped, automatically refreshed Kubernetes ServiceAccount token into the running container, so a service can authenticate to a cloud provider through OIDC web-identity federation (for example, AWS STS) without static, manually rotated credentials. The directive is cloud-agnostic: Okteto manages only the token projection, and you set the provider variables such as `AWS_ROLE_ARN`, `AWS_REGION`, and `AWS_WEB_IDENTITY_TOKEN_FILE` per service. It applies only to services that declare it, and requires Okteto CLI 3.21.0 or later <!-- PROD-497, okteto/okteto#5064 -->

### Improvements {#improvements-1.46}

- **Linked pull request in the Preview Environment view**: The Preview Environment details view now shows the pull request associated with the environment. Previously this link appeared only in the Preview Environments list <!-- PROD-441, 10220 -->
- **Chart version in the Help menu**: The Okteto Chart version is now shown in the Help menu for all users. This makes it easier to confirm the installed version when reporting an issue <!-- DEV-1388, 10192 -->
- Upgraded the bundled ingress-nginx to address [CVE-2026-49975](https://github.com/okteto/app/pull/10229), a high-severity HTTP/2 vulnerability in the ingress-nginx controller <!-- PLAT-1500, 10229 -->
- [Okteto CLI 3.21.0](https://github.com/okteto/okteto/releases/tag/3.21.0): The BuildKit readiness check timeout is now configurable through the [`OKTETO_BUILDKIT_READINESS_TIMEOUT`](reference/feature-flags.mdx) environment variable, with the default raised from 4 to 6 seconds. This prevents intermittent `context deadline exceeded` errors when building or deploying remotely over slow or high-latency connections <!-- DEV-1426, okteto/okteto#5057 -->

### Bug Fixes {#bug-fixes-1.46}

- [Okteto CLI 3.21.0](https://github.com/okteto/okteto/releases/tag/3.21.0): Fixed `okteto destroy --all` hanging until it timed out, and reporting a false error, when run against a Sleeping Namespace. The command now completes and leaves the Namespace in its previous status <!-- okteto/okteto#5072 -->

## 1.45.0

5 June 2026

This version is compatible with Kubernetes versions 1.33 to 1.35 \
Okteto Chart release 1.45 is designed to work with [Okteto CLI 3.20.x](https://github.com/okteto/okteto/releases/tag/3.20.0)

### Improvements {#improvements-1.45}

- **Filter resources by status in the Namespace view**: The resource list in a Namespace can now be filtered by status, such as **Deployed** or **Error**, making it faster to find a specific service in Namespaces that run many of them <!-- PROD-288, 10165 -->
- Upgraded the bundled ingress-nginx to address [CVE-2026-9256](https://github.com/okteto/app/pull/10182), a high-severity vulnerability in the ingress-nginx controller <!-- PLAT-1462, 10182 -->

### Bug Fixes {#bug-fixes-1.45}

- Fixed the GitHub branch selector in the Deploy dialog showing stale results from a previous search after a branch was unselected <!-- DEV-329, 10168 -->

## 1.44.0

8 May 2026

This version is compatible with Kubernetes versions 1.33 to 1.35 \
Okteto Chart release 1.44 is designed to work with [Okteto CLI 3.19.x](https://github.com/okteto/okteto/releases/tag/3.19.0)

### Important Notes {#important-notes-1.44}

- **Ingress NGINX distribution**: The `ingress-nginx` Helm dependency in the Okteto Chart is now sourced from Okteto's OCI fork at `ghcr.io/okteto/ingress-nginx-chart` instead of the upstream Helm repository. Standard installs and upgrades are unaffected because the dependency is packaged with the Okteto Chart, so the OCI registry is not contacted at install time. Workflows that re-resolve chart dependencies from source (for example, running `helm dep update` against the chart source, or configuring ArgoCD against the chart source repo) require Helm 3.8.0+ or ArgoCD 2.3.0+ for OCI support <!-- PLAT-1441, app#10160 -->

### New Features {#new-features-1.44}

- **Environment Variables in `build.secrets`**: The Okteto Manifest and Docker Compose stacks now support environment variables in the [`build.secrets`](reference/okteto-manifest.mdx#build-object-optional) section, complementing the existing file-based references. This enables passing dynamic build-time secrets directly from your environment without staging intermediate files <!-- PROD-461, DEV-1369, DEV-1370, okteto/okteto#4981, okteto/okteto#4989 -->

### Improvements {#improvements-1.44}

- The Git Catalog deploy flow now responds to the Enter key, making catalog deploys keyboard-accessible <!-- 10108 -->
- Improved the error message returned by the CLI when invalid environment-variable syntax is used in `build.secrets`, making it clearer what is expected <!-- DEV-1368 -->

### Bug Fixes {#bug-fixes-1.44}

- Fixed the Deploy dialog preserving its previous state after a deploy completed, instead of resetting <!-- 10123 -->
- Fixed tooltip flickering in the Dashboard <!-- 10112 -->
- [Okteto CLI 3.19.0](https://github.com/okteto/okteto/releases/tag/3.19.0): Fixed `okteto deploy` returning a generic manifest error instead of a compose-specific error when a file matching the compose filename pattern was syntactically invalid <!-- okteto/okteto#4997 -->

## 1.43.1

22 April 2026

This version is compatible with Kubernetes versions 1.33 to 1.35 \
Okteto Chart release 1.43 is designed to work with [Okteto CLI 3.18.x](https://github.com/okteto/okteto/releases/tag/3.18.0)

### Bug Fixes

- Fixed an issue where the pipeline runner image bundled in the chart contained zstd-compressed layers, which may cause container startup failures on clusters running certain containerd v1 versions

## 1.43.0

9 April 2026

This version is compatible with Kubernetes versions 1.33 to 1.35 \
Okteto Chart release 1.43 is designed to work with [Okteto CLI 3.18.x](https://github.com/okteto/okteto/releases/tag/3.18.0)

### Breaking Changes {#breaking-changes-1.43}

- **Kubernetes 1.32 Removal**: Support for Kubernetes [1.32](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md) has been removed in this release. Customers running Kubernetes 1.32 should upgrade to 1.33 or later before installing Chart 1.43
- **ArgoCD Certificate Configuration**: Customers using ArgoCD must update their `ignoreDifferences` configuration to include `/stringData/*` paths for Secret objects. Without this update, ArgoCD syncs may cause webhook TLS failures. See the updated [ArgoCD setup documentation](self-hosted/manage/argocd.mdx) for the corrected configuration

### New Features {#new-features-1.43}

- **Kubernetes 1.35 Support**: Added support for Kubernetes [1.35](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.35.md) <!-- PLAT-1293, 10096 -->
<!-- - **Gateway API Control Plane Support**: Okteto's control plane endpoints can now be exposed behind Gateway API, extending the Gateway API support introduced in 1.42 from user workloads to the platform itself. Gateway API runs behind Ingress NGINX, which remains available as a fallback DEV-1299 -->
- **[Agentic Workflows](agentic/index.mdx)**: New documentation section covering how to connect AI agents like Claude Code to your Okteto environments. Whether you're pair-programming with an agent in your IDE or letting it handle tasks autonomously, Okteto gives agents isolated, live environments using the same CLI and `okteto.yaml` manifest that human developers use

### Improvements {#improvements-1.43}

- Upgraded Ingress NGINX to 1.15.1 for Kubernetes 1.35 compatibility. This version also addresses several high-severity security vulnerabilities ([CVE-2026-24512](https://github.com/kubernetes/kubernetes/issues/136678), [CVE-2026-4342](https://github.com/kubernetes/kubernetes/issues/137893)) related to configuration injection in the ingress-nginx controller <!-- PLAT-1292, 10095 -->
- Upgraded BuildKit to v0.28.1 for improved build performance and stability
- Okteto AI: Updated to Claude Sonnet 4.6, the latest AI model for software development tasks
- Improved self-signed certificate generation in the Helm chart to resolve compatibility issues with ArgoCD-managed upgrades. Fixed a `stringData` vs `data` mismatch in `ignoreDifferences` configuration that caused webhook TLS verification failures <!-- 10089 -->
- [Okteto CLI 3.18.0](https://github.com/okteto/okteto/releases/tag/3.18.0) Handle missing Gateway API CRDs gracefully in compose endpoints <!-- okteto/okteto#4934 -->

### Bug Fixes {#bug-fixes-1.43}

- Fixed the redeploy button being visible in the resources list for users without the required permissions <!-- 10083 -->

## 1.42.0

12 March 2026

This version is compatible with Kubernetes versions 1.32 to 1.34 \
Okteto Chart release 1.42 is designed to work with [Okteto CLI 3.17.x](https://github.com/okteto/okteto/releases/tag/3.17.0)

### Deprecation Notice {#deprecation-notice-1.42}

- ⚠️ Important: **Support for Kubernetes [1.32](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md) will be removed in the next release** (1.43). Support for Kubernetes [1.35](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.35.md) will be added. Please plan your cluster upgrades accordingly.

### New Features {#new-features-1.42}

- **Build Queue Enabled by Default**: The [build queue system](core/build-service.mdx#build-queue-system) introduced as opt-in in 1.41 is now enabled by default. Build requests are automatically routed to the optimal Okteto Build pod based on real-time metrics, and when all build pods are busy, builds enter a queue to ensure consistent performance. Customers on significantly older CLI versions will continue using the legacy build path automatically. If you need to opt out, set the admin variable `OKTETO_BUILD_QUEUE_ENABLED` to `false` via [Admin Variables](admin/dashboard.mdx#admin-variables)

### Improvements {#improvements-1.42}

- **Persistent Namespace and Preview Indicators**: The "Keep Awake" option has been renamed to "Persistent" across the Dashboard and CLI for consistency. Namespaces and Preview Environments marked as [persistent](core/namespaces.mdx#mark-a-namespace-as-persistent-to-prevent-it-from-sleeping-and-deletion) now display a visual indicator in both the Okteto Dashboard and the CLI (`okteto namespace list` and `okteto preview list`), making it easier to identify which environments are exempt from automatic sleep and garbage collection <!-- 9986 -->
- Updated the Deploy dialog UI with a new drawer design for improved consistency across the Dashboard <!-- DEV-1263 -->
  <p align="center">
    <video autoPlay loop muted playsInline style={{ maxWidth: "800px", width: "100%", height: "auto" }}>
      <source src={require("@site/static/img/deploy-dialog.webm").default} type="video/webm" />
      <source src={require("@site/static/img/deploy-dialog.mp4").default} type="video/mp4" />
    </video>
  </p>

### Bug Fixes {#bug-fixes-1.42}
- Fixed a panic in the API that occurred in rare situations where a Kubernetes resource was restarting and the error message was not provided by Kubernetes, which caused the API container to restart

## 1.41.1

17 February 2026

This version is compatible with Kubernetes versions 1.32 to 1.34 \
Okteto Chart release 1.41 is designed to work with [Okteto CLI 3.16.x](https://github.com/okteto/okteto/releases/tag/3.16.0)

### Security {#security-1.41}

Fixed a critical vulnerability in the OAuth2 authentication flow that could allow an attacker to steal user credentials. We are not aware of any exploitation of this vulnerability in the wild.

We recommend all self-hosted customers upgrade to 1.41.1 as soon as possible. Full details will be published at a later date.

## 1.41.0

6 February 2026

This version is compatible with Kubernetes versions 1.32 to 1.34 \
Okteto Chart release 1.41 is designed to work with [Okteto CLI 3.16.x](https://github.com/okteto/okteto/releases/tag/3.16.0)

### Breaking Changes {#breaking-changes-1.41}

- **Node Selector Fix for Installer Jobs**: Fixed an issue where `globals.nodeSelectors` were not being correctly applied to installer jobs. This fix ensures node selectors are now properly enforced, but may cause pods to fail scheduling if they cannot reach the Okteto Control Plane due to infrastructure network firewalls or node placement constraints. Review your node selector configuration before upgrading. <!-- 9934 -->

### New Features {#new-features-1.41}

- **Build Queue System**: Okteto now implements a build queue system that ensures consistent build performance and fair resource distribution. Build requests are automatically routed to the optimal Okteto Build pod based on real-time metrics (CPU pressure, memory usage, and IOPS). When all build pods are busy, builds enter a queue and wait until resources become available, preventing overload and ensuring predictable build times. This behavior is disabled by default but can be enabled by setting the `OKTETO_BUILD_QUEUE_ENABLED` feature flag to `true` via [Admin Variables](admin/dashboard.mdx#admin-variables). Learn more about the [Build Queue System](core/build-service.mdx#build-queue-system)

### Improvements {#improvements-1.41}

- **Configurable Build Service Thresholds**: Administrators can now configure resource thresholds (CPU pressure, memory usage, and IOPS) directly from the [Build Service admin dashboard](admin/build-service.mdx) to fine-tune when build pods are considered busy
- **Restart Build Pods**: Administrators can now [restart individual Okteto Build pods directly from the Okteto Admin panel](admin/build-service.mdx#restarting-a-buildkit-pod). This makes it easier to recover from Okteto Build issues without requiring Kubernetes admin access or contacting Okteto support.
- [Okteto CLI 3.16.0](https://github.com/okteto/okteto/releases/tag/3.16.0) All container logs are now included with `okteto doctor`

### Bug Fixes {#bug-fixes-1.41}

- **Activity Metrics Accuracy Fix**: Fixed an issue affecting instances with personal namespace garbage collection enabled, where system-initiated garbage collection operations were incorrectly counted as user activity, inflating usage metrics. The root cause was a loop where personal namespaces cycled between sleeping and active states, generating repeated system operations. Both issues are now resolved, ensuring reliable activity data and accurate namespace state reporting. [Read the post-mortem](https://community.okteto.com/t/post-mortem-okteto-user-activity-metrics-incident/1452)
- **Pod Affinity Fix for Shared Volumes**: Fixed an issue where pods sharing persistent volume claims (PVCs) were not always scheduled on the same node. This ensures that services using shared storage in okteto up are correctly co-located.
- [Okteto CLI 3.16.0](https://github.com/okteto/okteto/releases/tag/3.16.0) Fixed a race condition when running parallel builds locally where the `.okteto/.secret` folder could be deleted while other concurrent build processes were still using it, causing "no such file or directory" errors
- [Okteto CLI 3.16.0](https://github.com/okteto/okteto/releases/tag/3.16.0) Improved handling of transient network errors during builds, reducing false failures caused by temporary connectivity issues



## 1.40.1

17 February 2026

This version is compatible with Kubernetes versions 1.32 to 1.34 \
Okteto Chart release 1.40 is designed to work with [Okteto CLI 3.15.x](https://github.com/okteto/okteto/releases/tag/3.15.0)

### Security {#security-1.40}

Fixed a critical vulnerability in the OAuth2 authentication flow that could allow an attacker to steal user credentials. We are not aware of any exploitation of this vulnerability in the wild.

We recommend all self-hosted customers upgrade to 1.40.1 as soon as possible. Full details will be published at a later date.

## 1.40.0

9 January 2026

This version is compatible with Kubernetes versions 1.32 to 1.34 \
Okteto Chart release 1.40 is designed to work with [Okteto CLI 3.15.x](https://github.com/okteto/okteto/releases/tag/3.15.0)

### Breaking Changes {#breaking-changes-1.40}

- **Default Registry Change**: Okteto now pulls images from GitHub Container Registry (ghcr.io) by default instead of Docker Hub. Images are still published to both registries. If you need to keep pulling from Docker Hub, see our [guide on configuring your registry](self-hosted/manage/upgrade.mdx#upgrading-to-okteto-140x--default-registry-change-to-github-container-registry)

### New Features {#new-features-1.40}

- **Builds Dashboard**: Track and analyze your build performance with the new [Builds dashboard in Okteto Insights](core/okteto-insights-dashboards.mdx#build-service-dashboard). Monitor build metrics, success rates, and performance trends across your organization to optimize your CI/CD pipeline
- **BuildKit Metrics and cgroups 1 Support**: Added support for BuildKit metrics collection and cgroups v1 compatibility to improve monitoring and resource management capabilities <!-- 9883 -->
- Added `OKTETO_MANAGED_POD` environment variable to all pods managed by Okteto for easier identification and filtering <!-- 9878 -->


### Improvements {#improvements-1.40}

- Improved registry probe configuration for better reliability and performance <!-- 9866 -->
- Upgraded BuildKit to v0.26.3 for enhanced performance, stability, and security <!-- 9881 -->
- Updated the [Catalog UI](admin/catalog.mdx) with new drawer design for improved user experience, all functionality remains the same <!-- 9874 -->
- Increased default timeout for destroying dependencies during namespace and preview environment deletion from 5 minutes to 30 minutes to better handle complex cleanup scenarios <!-- 9884 -->

### Bug Fixes {#bug-fixes-1.40}

- [Okteto CLI 3.15.0](https://github.com/okteto/okteto/releases/tag/3.15.0): Fixed an issue where destroy operations would fail when the metrics server or custom metrics server was not available

### Removal Notice {#removal-notice-1.40}
- Support for Kubernetes [1.31](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md) has been removed in this release.


## 1.39.1

17 February 2026

This version is compatible with Kubernetes versions 1.31 to 1.33 \
Okteto Chart release 1.39 is designed to work with [Okteto CLI 3.14.x](https://github.com/okteto/okteto/releases/tag/3.14.0)

### Security {#security-1.39}

Fixed a critical vulnerability in the OAuth2 authentication flow that could allow an attacker to steal user credentials. We are not aware of any exploitation of this vulnerability in the wild.

We recommend all self-hosted customers upgrade to 1.39.1 as soon as possible. Full details will be published at a later date.

## 1.39.0

5 December 2025

This version is compatible with Kubernetes versions 1.31 to 1.33 \
Okteto Chart release 1.39 is designed to work with [Okteto CLI 3.14.x](https://github.com/okteto/okteto/releases/tag/3.14.0)

### New Features {#new-features-1.39}

- **Build Service Admin Dashboard**: Administrators can now monitor BuildKit performance and resource utilization through a new [Build Service dashboard](admin/build-service.mdx). Track real-time metrics including CPU pressure, memory usage, I/O pressure, and active builds for each BuildKit pod to ensure optimal build performance across your Okteto instance

### Improvements {#improvements-1.39}

- Upgraded BuildKit to v0.26.2 for better performance, stability, and compatibility
- Added support for configuring the reloader image registry via `reloader.imageRegistry`
- Consolidated table columns and filter controls in the Admin view for Previews and Namespaces for a cleaner, more consistent UI
- Improved display of tooltips on disabled buttons in the UI
- Updated UI notifications with improved grouping and display behavior
- [Okteto CLI 3.14.0](https://github.com/okteto/okteto/releases/tag/3.14.0): Improved Smart Builds performance by checking if images are already built in parallel

### Bug Fixes {#bug-fixes-1.39}

- Fixed tooltip overflow issues in the Catalog
- AI Agent: Improved SSH forwarder connection handling to prevent dropped or stuck sessions
- Updated Claude Code and npm libraries to address [CVE-2025-64755](https://nvd.nist.gov/vuln/detail/CVE-2025-64755)
- [Okteto CLI 3.14.0](https://github.com/okteto/okteto/releases/tag/3.14.0): Fixed `okteto doctor` to track dev container logs to help troubleshoot `okteto up` issues
- [Okteto CLI 3.14.0](https://github.com/okteto/okteto/releases/tag/3.14.0): Fixed the `--reset` flag behavior in `okteto up`
- [Okteto CLI 3.14.0](https://github.com/okteto/okteto/releases/tag/3.14.0): Fixed SSH forwarder connection handling when connecting with the SSH agent
- [Okteto CLI 3.14.0](https://github.com/okteto/okteto/releases/tag/3.14.0): Fixed `okteto up` support for deployments with `shareProcessNamespace: true` enabled

## 1.38.1

21 November 2025

This version is compatible with Kubernetes versions 1.31 to 1.33 \
Okteto Chart release 1.37 is designed to work with [Okteto CLI 3.13.x](https://github.com/okteto/okteto/releases/tag/3.13.0)

### Bug Fixes

- [Okteto CLI 3.13.3](https://github.com/okteto/okteto/releases/tag/3.13.3): Fixed a timeout issue when contacting the SSH agent during remote deploys where commands in the Okteto Manifest performed SSH operations

## 1.38.0

7 November 2025

This version is compatible with Kubernetes versions 1.31 to 1.33 \
Okteto Chart release 1.38 is designed to work with [Okteto CLI 3.13.x](https://github.com/okteto/okteto/releases/tag/3.13.0)

### Important Notes {#important-notes-1.38}

- **Upgrade Considerations for Self-Hosted Customers**: Internal certificates have been unified into a [single configuration](self-hosted/helm-configuration.mdx#internalcertificate). During the upgrade, you may experience temporary communication issues lasting a few seconds as the new certificate configuration takes effect
- **ArgoCD Users**: If you manage your Okteto installation with ArgoCD, review our [Argo CD guide](self-hosted/manage/argocd.mdx). The certificate unification may require special attention during the ArgoCD sync process to avoid deployment interruptions.

### New Features {#new-features-1.38}

- **Enhanced Preview Environments Performance**: Significantly improved loading performance, reducing load times by up to 15x for customers with large numbers of Preview Environments <!-- 9761 -->
- **Advanced Preview Environments Filtering**: Added comprehensive filtering options including search, repository, status, owner, and time-based filters to help teams quickly find specific preview environments <!-- 9761 -->
- Added read-only mode for [Known Hosts configuration](self-hosted/manage/crds.mdx#known-hosts), allowing admins to lock down SSH host key management and prevent accidental modifications <!-- 9726 -->
  
### Improvements {#improvements-1.38}

- Upgraded to BuildKit v0.25.2 for improved build performance and stability <!-- 9725, 9731 -->
- Updated Okteto AI Agent base image to Debian Trixie with Go 1.24.6 and Node.js 24 <!-- 9729 -->
- Okteto AI: Added support for Claude Sonnet 4.5, the latest AI model optimized for software development tasks <!-- 9745 -->
- Improved [Okteto Build cache isolation](core/build-service.mdx#mount-cache-id-management): Cache IDs now incorporate both the target path and repository name to prevent different repositories from accidentally sharing the same cache
- [Okteto CLI 3.13.0](https://github.com/okteto/okteto/releases/tag/3.13.0): Enhanced namespace destruction logic and error handling during resource cleanup

### Bug Fixes {#bug-fixes-1.38}

- Fixed a problem when Known Hosts feature was enabled where the ssh-keyscan command kept being executed when it shouldn't <!-- 9738 -->
- [Okteto CLI 3.13.0](https://github.com/okteto/okteto/releases/tag/3.13.0): Fixed nil pointer exception in build command when the specified Dockerfile doesn't exist
- [Okteto CLI 3.13.0](https://github.com/okteto/okteto/releases/tag/3.13.0): Improved error handling in log streaming during resource destruction as logs were not being fully displayed
- [Okteto CLI 3.13.0](https://github.com/okteto/okteto/releases/tag/3.13.0): Fixed cache isolation in `okteto test` where different test containers sharing the same cached directory could reuse each other's cache. Caches are now properly isolated and only reused across executions of the same test container

## 1.37.3

21 November 2025

This version is compatible with Kubernetes versions 1.31 to 1.33 \
Okteto Chart release 1.37 is designed to work with [Okteto CLI 3.12.x](https://github.com/okteto/okteto/releases/tag/3.12.0)

### Bug Fixes

- [Okteto CLI 3.12.3](https://github.com/okteto/okteto/releases/tag/3.12.3): Fixed a timeout error contacting with the SSH agent on remote deploys when some of the commands defined in the Okteto Manifest were performing SSH operations

## 1.37.2

15 October 2025

This version is compatible with Kubernetes versions 1.31 to 1.33 \
Okteto Chart release 1.37 is designed to work with [Okteto CLI 3.12.x](https://github.com/okteto/okteto/releases/tag/3.12.0)

### Bug Fixes {#bug-fixes-1.37}

- Fixed repository cloning failures with SSH host verification - Resolved conflicts between automatic SSH scanning and admin-configured known hosts that could cause deployment failures.

## 1.37.1

7 October 2025

This version is compatible with Kubernetes versions 1.31 to 1.33 \
Okteto Chart release 1.37 is designed to work with [Okteto CLI 3.12.x](https://github.com/okteto/okteto/releases/tag/3.12.0)

### Improvements {#improvements-1.37.1}

- Upgrade Redis to 8.2.2 to fix [CVE-2025-49844](https://www.wiz.io/blog/wiz-research-redis-rce-cve-2025-49844)

## 1.37.0

1 October 2025

This version is compatible with Kubernetes versions 1.31 to 1.33 \
Okteto Chart release 1.37 is designed to work with [Okteto CLI 3.12.x](https://github.com/okteto/okteto/releases/tag/3.12.0)

### Breaking Changes {#breaking-changes-1.37}

- Removed the dependency on the Bitnami Redis Helm chart. Okteto now ships its own Kubernetes templates to deploy Redis. As part of this change, the workload has been updated from a StatefulSet to a Deployment, and the available Redis configuration options [have been reduced and standardized](self-hosted/helm-configuration.mdx#redis). If you previously customized Redis using Bitnami-specific values, review and update your Helm values to align with the supported configuration before upgrading. <!-- 9663 -->
- We've changed the [default value of `pullAlways` to **false**](self-hosted/helm-configuration.mdx#pullalways) for pods deployed in Okteto-managed namespaces. This speeds up pod creation when images are already present on the node, while still allowing `pullAlways` to be explicitly enabled if needed <!-- 9690 -->

### New Features {#new-features-1.37}

- Added a centralized [Known Hosts feature to the Admin UI](admin/ssh-known-hosts.mdx) (Admin → Settings → Known Hosts). Admins can now pin trusted SSH host keys and disable automatic ssh-keyscan, ensuring secure, consistent cloning of repositories and submodules without custom runner images <!-- 9662 -->

### Improvements {#improvements-1.37}

- Improved error handling in the Okteto AI Agent UI for API errors and "Prompt too long" warnings <!-- 9636 -->
- Temporal rate limit (QPS exceeded) errors now return as "progressing" instead of failing immediately <!-- 9664 -->
- We've renamed AI Agent Fleets to Okteto AI throughout the product <!-- 9677 -->
- [Okteto CLI 3.12.0](https://github.com/okteto/okteto/releases/tag/3.12.0): Updated Syncthing to 2.0.x for improved synchronization performance
- [Okteto CLI 3.12.0](https://github.com/okteto/okteto/releases/tag/3.12.0): Added support for `endpoint_mode` in Compose files ([see documentation](reference/docker-compose.mdx#endpoint_mode-string-optional)).

### Bug Fixes {#bug-fixes-1.37}

- Fixed issues with endpoint handling in the Okteto AI Agent view, including non-scrollable lists and incorrect display of custom endpoints <!-- 9653 --> <!-- 9666 -->
- Fixed an "unable to load agent" error when returning focus to the window <!-- 9703 -->
- Fixed autoscroll behavior when sending a new prompt in the Agent UI <!-- 9705 -->
- [Okteto CLI 3.12.0](https://github.com/okteto/okteto/pull/4760): Improved CLI stability by waiting for SSE when streaming logs for pipeline, preview, deploy, and destroy operations

## 1.36.2

12 September 2025

This version is compatible with Kubernetes versions 1.31 to 1.33 \
Okteto Chart release 1.36 is designed to work with [Okteto CLI 3.11.x](https://github.com/okteto/okteto/releases/tag/3.11.0)

### Improvements

- Improve Okteto UI UX by showing "Pulling" status when encountering transient pull QPS exceeded errors

### Bug Fixes

- Fixed an issue with Kubernetes credential configuration in the delete agent job
- Fixed a UI issue where the list of endpoints in the agent view was not scrollable

## 1.36.1

9 September 2025

This version is compatible with Kubernetes versions 1.31 to 1.33 \
Okteto Chart release 1.36 is designed to work with [Okteto CLI 3.11.x](https://github.com/okteto/okteto/releases/tag/3.11.0)

### Bug Fixes
- Fixed an issue with streaming Okteto Agent installation logs that was preventing the agent chat from loading

## 1.36.0

5 September 2025

This version is compatible with Kubernetes versions 1.31 to 1.33 \
Okteto Chart release 1.36 is designed to work with [Okteto CLI 3.11.x](https://github.com/okteto/okteto/releases/tag/3.11.0)

### [Okteto AI Now Available (Beta)](okteto-ai/index.mdx)
Okteto AI brings the power of AI directly into your development workflow, powered by Claude Code from Anthropic. Each agent operates independently in its own Kubernetes namespace with full isolation, giving you the safety and control you need for AI-assisted development.

#### Key Capabilities

- **Intelligent Repository Onboarding**: Agents can quickly understand and work with existing codebases, analyzing project structure, dependencies, and patterns to get up to speed faster than ever
- **Application Scaffolding**: Generate new services, APIs, and applications from natural language descriptions, complete with best practices and proper project structure
- **Task Automation**: Automate common development tasks like adding endpoints, refactoring code, updating dependencies, or implementing new features
- **Real Containerized Environments**: All agents run in production-like Kubernetes environments with access to the same runtime, secrets, and configurations as your actual development setup
- **Parallel Execution**: Launch multiple agents simultaneously to work on different features or experiments independently

#### For Administrators
Organization administrators have [full control over Okteto AI deployment](okteto-ai/okteto-ai-admin-config.mdx):
- Enable the feature for your organization through the Admin Dashboard under Admin > Okteto AI
- Toggle access per user to control who can launch AI agents in your organization
- Configure LLM keys - Provide your own Anthropic API key (directly from Anthropic or via Amazon Bedrock)

We're continuously improving Okteto AI based on your feedback. Try it today and let us know how it transforms your development workflow!

### New Features {#new-features-1.36}

- Added a [new Public API endpoint to delete users](admin/okteto-api.mdx)  <!-- 9572 -->
- Added support for [configuring custom init containers](self-hosted/helm-configuration.mdx#installer) in the installer job  <!-- 9598 -->
- Pre-pull Okteto images used by jobs to accelerate job start times. This deploys a new [DaemonSet in the cluster that pre-pulls images](self-hosted/helm-configuration.mdx#prepullimages ) onto nodes.  <!-- 9601 -->

### Improvements {#improvements-1.36}

- Installer now retries transient connection issues  <!-- 9608 -->
- [Okteto CLI 3.11.0](https://github.com/okteto/okteto/releases/tag/3.11.0): Added support for overriding the [`readOnlyRootFilesystem`](reference/okteto-manifest.mdx#securitycontext-object-optional) property in the `securityContext` of dev containers defined in the Okteto Manifest

### Bug Fixes {#bug-fixes-1.36}

- Fixed previews layout issue that could hide logs when breadcrumb is visible  <!-- 9588 -->
- [Okteto CLI 3.11.0](https://github.com/okteto/okteto/releases/tag/3.11.0): Fixed a panic when deploying an Okteto manifest with Divert using `okteto up` or `okteto test`
- [Okteto CLI 3.11.0](https://github.com/okteto/okteto/releases/tag/3.11.0): Fixed an issue with the `--wait` flag in `okteto deploy` when deploying a subset of services from a Compose file. The command no longer hangs until timeout

## 1.35.2

29 August 2025

This version is compatible with Kubernetes versions 1.31 to 1.33 \
Okteto Chart release 1.35 is designed to work with [Okteto CLI 3.10.x](https://github.com/okteto/okteto/releases/tag/3.10.0)

### Bug Fixes
- Downgrade BuildKit dependency to version `0.22.0` to avoid a bug that was causing a huge consumption in CPU, provoking poor performance and stuck builds.

## 1.35.1

12 August 2025

This version is compatible with Kubernetes versions 1.31 to 1.33 \
Okteto Chart release 1.35 is designed to work with [Okteto CLI 3.10.x](https://github.com/okteto/okteto/releases/tag/3.10.0)

### Bug Fixes
- Fixed an issue in the daemonset which was causing the component to fail when the Okteto instance was not using self-signed certificates nor private CAs.

## 1.35.0

1 August 2025

This version is compatible with Kubernetes versions 1.31 to 1.33 \
Okteto Chart release 1.35 is designed to work with [Okteto CLI 3.10.x](https://github.com/okteto/okteto/releases/tag/3.10.0)

### New Features {#new-features-1.35}
- Added support for [Kubernetes 1.33](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.33.md) (support for 1.30 has been removed) and [Amazon Linux 2023](https://github.com/amazonlinux/amazon-linux-2023). [Please follow our upgrade guide](self-hosted/manage/upgrade.mdx#upgrading-to-okteto-135x--kubernetes-133-support-and-amazon-linux-2023-al2023compatibility) when moving to Amazon Linux 2023
- CIDR-based traffic filtering is now supported for BYOC (Bring Your Own Cluster) environments. Use this to improve security by restricting access to Okteto services to specific IP ranges.
- Namespace deletion now properly applies the timeout value to dev environments that use a `destroy` section in their manifest. Previously, if a dev environment took longer than 5 minutes to destroy gracefully, the overall namespace deletion would fail, even if a longer timeout was specified. <!-- 9530 -->
- Added support for `loadBalancerSourceRanges` in the BuildKit service configuration to better control external access
- [Okteto CLI 3.10.0](https://github.com/okteto/okteto/releases/tag/3.10.0): Okteto now supports inheriting Kubernetes `nodeSelector` and resource settings in Development Environments. When omitted from the `okteto.yaml` manifest, these values can be pulled from the base Kubernetes resources using the `OKTETO_INHERIT_KUBERNETES_RESOURCES` and `OKTETO_INHERIT_KUBERNETES_NODESELECTOR` feature flags.

### Improvements {#improvements-1.35}
- [Okteto CLI 3.10.0](https://github.com/okteto/okteto/releases/tag/3.10.0): Improved the `okteto deploy` command to avoid rebuilding all images when deploying a compose and only a subset of services are being deployed.
- [Okteto CLI 3.10.0](https://github.com/okteto/okteto/releases/tag/3.10.0): Updated the `okteto preview destroy` command to correctly propagate the `--timeout` flag to the backend, ensuring longer destroy operations don’t fail prematurely. ⚠️ This requires both CLI 3.10.0 and Chart 1.35.
- [Okteto CLI 3.10.0](https://github.com/okteto/okteto/releases/tag/3.10.0): Enhanced `okteto context use` to better handle invalid or expired local tokens. The CLI will now prompt for login rather than failing with a non-actionable error.

### Bug Fixes {#bug-fixes-1.35}
- Fixed an issue that prevented some development environments from waking up as expected when there were dependency cycles between dev environments
- Improved AWS IAM Role regex handling for tighter validation on Private Registry Credentials and Cloud Credentials

### Removal Notice {#removal-notice-1.35}
- Support for Kubernetes [1.30](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.30.md) has been removed in this release.


## 1.34

3 July 2025

This version is compatible with Kubernetes versions 1.30 to 1.32 \
Okteto Chart release 1.34 is designed to work with [Okteto CLI 3.9.x](https://github.com/okteto/okteto/releases/tag/3.9.0)

### Improvements {#improvements-1.34}
- [Okteto CLI 3.9.0](https://github.com/okteto/okteto/releases/tag/3.9.0): Added a [feature flag](reference/feature-flags.mdx) to return services in development to their "running" state (`okteto down`) when exiting the terminal session
- [Okteto CLI 3.9.0](https://github.com/okteto/okteto/releases/tag/3.9.0): Included a [feature flag](reference/feature-flags.mdx) to make `dev.<name>.services` wait for file synchronization to finish before running their commands during `okteto up` execution  <!-- 4731 -->

### Bug Fixes {#bug-fixes-1.34}

- Fixed the "Retry Destroy" action so it now performs a graceful deletion instead of triggering a force destroy. Previously, both "Retry Destroy" and "Force Destroy" were triggering a force deletion  <!-- 9447 -->
- Fixed breadcrumb layout regressions across several updates  <!-- 9472, 9474, 9478 -->
- Prevented UI overflow of the redeploy button in the resources sidebar  <!-- 9486 -->
- Fixed an error when running `okteto test` with defined artifacts but no output files; the `/okteto/artifacts` directory is now created by default to prevent execution failures <!-- 4735 -->
